--- a/index.html
+++ b/index.html
@@ -19,12 +19,24 @@
           <a href="#about">About</a>
           <a href="#blog">Blog</a>
           <a href="#contact">Contact</a>
+          <a href="#search">&#x1F50D;</a>
         </div>
         <div class="mobile-menu">
           <i class="icofont-navigation-menu"></i>
         </div>
       </nav>
     </div>
+
+    <!-- Hero section -->
+    <section class="hero">
+      <div class="left"></div>
+      <div class="right">
+        <div class="content-box">
+          <span>Healty Food - 06/06/2022</span>
+          <h1>Join us to know more about the benefites of eating healthy foods.</h1>
+        </div>
+      </div>
+    </section>
 
     <script src="app.js"></script>
   </body>
