Design blog section
Signed-off-by: Tapan Kumer Das <voboghure.dev@gmail.com>

--- a/index.html
+++ b/index.html
@@ -33,10 +33,111 @@
       <div class="right">
         <div class="content-box">
           <span>Healty Food - 06/06/2022</span>
-          <h1>Join us to know more about the benefites of eating healthy foods.</h1>
+          <h1>
+            Join us to know more about the benefites of eating healthy foods.
+          </h1>
         </div>
       </div>
     </section>
+
+    <!-- Blog section -->
+    <div class="site-container">
+      <main>
+        <div class="blog">
+          <div class="blog-post">
+            <div class="thumbnail">
+              <img src="images/1.jpg" alt="" />
+            </div>
+            <div class="blog-content">
+              <span>Keto Diet - 10/06/2022</span>
+              <h3>Top 10 Keto Diets</h3>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi
+                harum perferendis voluptatem reiciendis possimus. Omnis, error
+                ipsa repellat dignissimos fugit excepturi impedit alias
+                provident ad aliquam voluptatem iusto sed commodi.
+              </p>
+            </div>
+          </div>
+          <div class="blog-post">
+            <div class="thumbnail">
+              <img src="images/1.jpg" alt="" />
+            </div>
+            <div class="blog-content">
+              <span>Keto Diet - 10/06/2022</span>
+              <h3>Top 10 Keto Diets</h3>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi
+                harum perferendis voluptatem reiciendis possimus. Omnis, error
+                ipsa repellat dignissimos fugit excepturi impedit alias
+                provident ad aliquam voluptatem iusto sed commodi.
+              </p>
+            </div>
+          </div>
+          <div class="blog-post">
+            <div class="thumbnail">
+              <img src="images/1.jpg" alt="" />
+            </div>
+            <div class="blog-content">
+              <span>Keto Diet - 10/06/2022</span>
+              <h3>Top 10 Keto Diets</h3>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi
+                harum perferendis voluptatem reiciendis possimus. Omnis, error
+                ipsa repellat dignissimos fugit excepturi impedit alias
+                provident ad aliquam voluptatem iusto sed commodi.
+              </p>
+            </div>
+          </div>
+          <div class="blog-post">
+            <div class="thumbnail">
+              <img src="images/1.jpg" alt="" />
+            </div>
+            <div class="blog-content">
+              <span>Keto Diet - 10/06/2022</span>
+              <h3>Top 10 Keto Diets</h3>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi
+                harum perferendis voluptatem reiciendis possimus. Omnis, error
+                ipsa repellat dignissimos fugit excepturi impedit alias
+                provident ad aliquam voluptatem iusto sed commodi.
+              </p>
+            </div>
+          </div>
+          <div class="blog-post">
+            <div class="thumbnail">
+              <img src="images/1.jpg" alt="" />
+            </div>
+            <div class="blog-content">
+              <span>Keto Diet - 10/06/2022</span>
+              <h3>Top 10 Keto Diets</h3>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi
+                harum perferendis voluptatem reiciendis possimus. Omnis, error
+                ipsa repellat dignissimos fugit excepturi impedit alias
+                provident ad aliquam voluptatem iusto sed commodi.
+              </p>
+            </div>
+          </div>
+          <div class="blog-post">
+            <div class="thumbnail">
+              <img src="images/1.jpg" alt="" />
+            </div>
+            <div class="blog-content">
+              <span>Keto Diet - 10/06/2022</span>
+              <h3>Top 10 Keto Diets</h3>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi
+                harum perferendis voluptatem reiciendis possimus. Omnis, error
+                ipsa repellat dignissimos fugit excepturi impedit alias
+                provident ad aliquam voluptatem iusto sed commodi.
+              </p>
+            </div>
+          </div>
+        </div>
+        <aside></aside>
+      </main>
+    </div>
 
     <script src="app.js"></script>
   </body>
