--- a/index.html
+++ b/index.html
@@ -134,6 +134,15 @@
               </p>
             </div>
           </div>
+
+          <div class="pagination">
+            <a href="#">&laquo;</a>
+            <a href="" class="active">1</a>
+            <a href="">2</a>
+            <a href="">3</a>
+            <a href="">4</a>
+            <a href="#">&raquo;</a>
+          </div>
         </div>
         <aside></aside>
       </main>
