Design main section
Signed-off-by: Tapan Kumer Das <voboghure.dev@gmail.com>

--- a/index.html
+++ b/index.html
@@ -144,7 +144,116 @@
             <a href="#">&raquo;</a>
           </div>
         </div>
-        <aside></aside>
+        <aside>
+          <div class="commented-posts">
+            <header>
+              <h3>Most Commented Posts</h3>
+            </header>
+            <div class="wrapper">
+              <div class="thumb">
+                <img src="images/1.jpg" alt="" />
+              </div>
+              <div class="content">
+                <span>Health - 12/06/2022</span>
+                <h4>Advantages of eating healthy</h4>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Quidem, cupiditate.
+                </p>
+                <a href="">8 comments</a>
+              </div>
+            </div>
+            <div class="wrapper">
+              <div class="thumb">
+                <img src="images/1.jpg" alt="" />
+              </div>
+              <div class="content">
+                <span>Health - 12/06/2022</span>
+                <h4>Advantages of eating healthy</h4>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Quidem, cupiditate.
+                </p>
+                <a href="">8 comments</a>
+              </div>
+            </div>
+            <div class="wrapper">
+              <div class="thumb">
+                <img src="images/1.jpg" alt="" />
+              </div>
+              <div class="content">
+                <span>Health - 12/06/2022</span>
+                <h4>Advantages of eating healthy</h4>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Quidem, cupiditate.
+                </p>
+                <a href="">8 comments</a>
+              </div>
+            </div>
+          </div>
+          <div class="recent-posts">
+            <header>
+              <h3>Most Recent Posts</h3>
+            </header>
+            <div class="wrapper">
+              <div class="thumb">
+                <img src="images/1.jpg" alt="" />
+              </div>
+              <div class="content">
+                <span>Health - 12/06/2022</span>
+                <h4>Advantages of eating healthy</h4>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Quidem, cupiditate.
+                </p>
+                <a href="">8 comments</a>
+              </div>
+            </div>
+            <div class="wrapper">
+              <div class="thumb">
+                <img src="images/1.jpg" alt="" />
+              </div>
+              <div class="content">
+                <span>Health - 12/06/2022</span>
+                <h4>Advantages of eating healthy</h4>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Quidem, cupiditate.
+                </p>
+                <a href="">8 comments</a>
+              </div>
+            </div>
+            <div class="wrapper">
+              <div class="thumb">
+                <img src="images/1.jpg" alt="" />
+              </div>
+              <div class="content">
+                <span>Health - 12/06/2022</span>
+                <h4>Advantages of eating healthy</h4>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Quidem, cupiditate.
+                </p>
+                <a href="">8 comments</a>
+              </div>
+            </div>
+            <div class="wrapper">
+              <div class="thumb">
+                <img src="images/1.jpg" alt="" />
+              </div>
+              <div class="content">
+                <span>Health - 12/06/2022</span>
+                <h4>Advantages of eating healthy</h4>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Quidem, cupiditate.
+                </p>
+                <a href="">8 comments</a>
+              </div>
+            </div>
+          </div>
+        </aside>
       </main>
     </div>
 
