Footer markup done
Signed-off-by: Tapan Kumer Das <voboghure.dev@gmail.com>

--- a/index.html
+++ b/index.html
@@ -257,6 +257,61 @@
       </main>
     </div>
 
+    <footer>
+      <div class="site-container">
+        <div class="footer-top">
+          <div class="left">
+            <h3>Food Blog</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro
+              hic vitae, minus, iusto veniam officia, amet ipsa similique
+              dignissimos nemo nihil odio repellendus! Inventore in iste
+              voluptas obcaecati facere libero?
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro
+              hic vitae, minus, iusto veniam officia, amet ipsa similique
+              dignissimos nemo nihil odio repellendus! Inventore in iste
+              voluptas obcaecati facere libero?
+            </p>
+          </div>
+          <div class="center">
+            <h3>Recent Posts</h3>
+            <a href=""><p>Diet rich in carbs</p></a>
+            <a href=""><p>Diet rich in carbs</p></a>
+            <a href=""><p>Diet rich in carbs</p></a>
+            <a href=""><p>Diet rich in carbs</p></a>
+            <a href=""><p>Diet rich in carbs</p></a>
+          </div>
+          <div class="right">
+            <h3>Recent Comments</h3>
+            <a href=""><p>Diet rich in carbs</p></a>
+            <a href=""><p>Diet rich in carbs</p></a>
+            <a href=""><p>Diet rich in carbs</p></a>
+            <a href=""><p>Diet rich in carbs</p></a>
+            <a href=""><p>Diet rich in carbs</p></a>
+          </div>
+        </div>
+        <div class="footer-bottom">
+          <div class="footer-menu">
+            <ul>
+              <li><a href="">Home</a></li>
+              <li><a href="">About</a></li>
+              <li><a href="">Blog</a></li>
+              <li><a href="">Contact</a></li>
+            </ul>
+            <p>Copyright &copy; 2022 Food blog</p>
+          </div>
+          <div class="social-icons">
+            <i class="icofont-facebook"></i>
+            <i class="icofont-twitter"></i>
+            <i class="icofont-instagram"></i>
+            <i class="icofont-linkedin"></i>
+          </div>
+        </div>
+      </div>
+    </footer>
+
     <script src="app.js"></script>
   </body>
 </html>
