Footer css done
Signed-off-by: Tapan Kumer Das <voboghure.dev@gmail.com>

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Food Blog</title>
   </head>
   <body>
+    <div class="scroll-top">^</div>
+
     <div class="site-container">
       <nav>
         <div class="logo">
@@ -292,6 +294,7 @@
             <a href=""><p>Diet rich in carbs</p></a>
           </div>
         </div>
+        <hr />
         <div class="footer-bottom">
           <div class="footer-menu">
             <ul>
